# factorioctl

./: .gitignore  CLAUDE.md  Cargo.toml  NOTES.md  README.md
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.choir/context/: agent-scoped-character-binding-spec.md  fle-study-q6u.md
.claude/: settings.local.json
.github/workflows/: ci.yml
bugs/: 2026-01-25-belt-routing-through-trees.md  2026-01-25-craft-intermediate-products.md  2026-01-25-exclamation-mark-escaped.md  2026-01-25-teleport-not-working.md  2026-01-25-tts-blocking.md  2026-01-25-tts-cut-short.md  2026-01-25-walking-not-smooth.md  README.md
companion/: .gitignore  _load_bridge_tests.py  justfile  pyproject.toml  run.sh  start-server.sh  stop-server.sh  test_journal.py  test_ledger.py  test_planner.py  test_rcon.py  test_skills.py
companion/bridge/: eval.py  journal.py  learning.py  ledger.py  pipe.py  planner.py  rcon.py  skills.py  test_eval.py  test_journal.py  test_learning.py  test_ledger.py  test_planner.py  test_rcon.py  test_skills.py  test_transport.py  transport.py
companion/mod/claude-interface/: control.lua
configs/: test-map-gen.json  test-server.json
docs/: factorio-cli.md  lua-api.md  rcon-protocol.md  watching.md
scripts/: create_map.py  e2e_test.py  rcon_client.py  rust_e2e_test.py  smoke_agent_binding.sh
src/: config.rs  lib.rs  main.rs
src/analyze/: belt_gaps.rs  belt_graph.rs  belt_network.rs  (+6 more)
tests/: README.md  agent_test_instructions.md  cleanup.sh  lua_golden.rs  pathfinding_tests.rs  production_golden.rs  run_tests.sh  setup.sh  situation_golden.rs
(+66 files in other folders)
