[package]
name = "factorioctl"
version = "0.1.0"
edition = "2021"
description = "CLI tool for controlling Factorio headless servers via RCON"
license = "MIT"
repository = "https://github.com/factorioctl/factorioctl"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System utilities
which = "7"
whoami = "1"

[dev-dependencies]
# Testing
tokio-test = "0.4"
tempfile = "3"
